WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224529
[iOS] WKMouseDeviceObserver is calling WebProcessProxy::send() on a non-main thread
https://bugs.webkit.org/show_bug.cgi?id=224529
Summary
[iOS] WKMouseDeviceObserver is calling WebProcessProxy::send() on a non-main ...
Chris Dumez
Reported
2021-04-13 22:09:16 PDT
WKMouseDeviceObserver is calling WebProcessProxy::send() on a non-main thread on iOS. WebProcessProxy::send() is not thread-safe so we added an assertion in
r275839
to help catch such bugs.
Attachments
Patch
(3.86 KB, patch)
2021-04-13 22:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-04-13 22:09:29 PDT
<
rdar://76598710
>
Chris Dumez
Comment 2
2021-04-13 22:12:17 PDT
Created
attachment 425952
[details]
Patch
EWS
Comment 3
2021-04-14 01:05:20 PDT
Found 1 new test failure: imported/w3c/web-platform-tests/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-ctor.html
Tim Horton
Comment 4
2021-04-14 01:10:19 PDT
Comment on
attachment 425952
[details]
Patch Nonsense.
EWS
Comment 5
2021-04-14 01:20:59 PDT
Committed
r275937
(
236499@main
): <
https://commits.webkit.org/236499@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425952
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug