[iOS] WKMouseDeviceObserver is calling WebProcessProxy::send() on a non-main thread https://bugs.webkit.org/show_bug.cgi?id=224529 <rdar://76598710>

Reviewed by Tim Horton.

Make sure WKMouseDeviceObserver calls WebProcessProxy::notifyHasMouseDeviceChanged() on the main thread
since:
1. It iterates over WebProcessProxy::allProcesses() which is only safe on the main thread
2. It calls WebProcessProxy::send() wich is only safe on the main thread

* UIProcess/WebProcessProxy.h:
* UIProcess/ios/WKMouseDeviceObserver.mm:
(-[WKMouseDeviceObserver mousePointerDevicesDidChange:]):
(-[WKMouseDeviceObserver _setHasMouseDeviceForTesting:]):
* UIProcess/ios/WebProcessProxyIOS.mm:
(WebKit::WebProcessProxy::notifyHasMouseDeviceChanged):


Canonical link: https://commits.webkit.org/236499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275937 268f45cc-cd09-0410-ab3c-d52691b4dbfc